refactor(code): 代码执行模块综合审查重构与能力增强 (#65)
* refactor(code): 代码执行模块综合审查重构与能力增强

Bug 修复：Language.fromString 支持别名（js/bash/sh/py）修复审计丢失；
内核 stderr redirectErrorStream(true) 防死锁；ShellKernel 补输出截断
重构：提取 ProcessKernelBase 消除 PythonKernel/JavaScriptKernel ~330 行重复；
构造函数参数化避免虚方法调用时序问题；类级共享 executor
新能力：code.kernel.list 工具；内核 ERROR 态自动重启（tryRestart）
代码质量：SandboxRepository SELECT * 改为具体字段；sealed pattern matching；
CodeValidator exec/compile 正则排除安全前缀降低误报

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* fix(code): 修复 PR Review 阻塞项 — -u 参数改参数列表 + Javadoc 编码修复

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

---------

Co-authored-by: Claude Opus 4.6 (1M context) <noreply@anthropic.com>